--- a/spec.yaml
+++ b/spec.yaml
@@ -15,13 +15,13 @@ source_dir: .
 github:
 # Depending on when you created the repository,
 # the default branch on GitHub might have been named `master`
-branch: main
+branch: root-chapter-05
 # Deploy a new version on every commit to `main`!
 # Continuous Deployment, here we come!
 deploy_on_push: true
 # !!! Fill in with your details
 # e.g. LukeMathWalker/zero-to-production
-repo: <YOUR USERNAME>/<YOUR REPOSITORY NAME>
+repo: robertkottelin/zero-to-production
 # Active probe used by DigitalOcean's to ensure our application is healthy
 health_check:
 # The path to our health check endpoint!
